feat(brokerage): add market service
