# services/brokerage/api/market_grpc.pb.go
@@ -23,8 +23,10 @@ const _ = grpc.SupportPackageIsVersion7
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type MarketServiceClient interface {
+	Set(ctx context.Context, in *Market, opts ...grpc.CallOption) (*Market, error)
 	Get(ctx context.Context, in *MarketRequest, opts ...grpc.CallOption) (*Market, error)
-	List(ctx context.Context, in *api.Void, opts ...grpc.CallOption) (*Markets, error)
+	List(ctx context.Context, in *MarketListRequest, opts ...grpc.CallOption) (*Markets, error)
+	ChangeStatus(ctx context.Context, in *api.StatusChangeRequest, opts ...grpc.CallOption) (*api.Status, error)
 }
 
 type marketServiceClient struct {
@@ -33,6 +35,15 @@ type marketServiceClient struct {
 
 func NewMarketServiceClient(cc grpc.ClientConnInterface) MarketServiceClient {
 	return &marketServiceClient{cc}
+}
+
+func (c *marketServiceClient) Set(ctx context.Context, in *Market, opts ...grpc.CallOption) (*Market, error) {
+	out := new(Market)
+	err := c.cc.Invoke(ctx, "/brokerageApi.MarketService/Set", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
 }
 
 func (c *marketServiceClient) Get(ctx context.Context, in *MarketRequest, opts ...grpc.CallOption) (*Market, error) {
@@ -44,9 +55,18 @@ func (c *marketServiceClient) Get(ctx context.Context, in *MarketRequest, opts .
 	return out, nil
 }
 
-func (c *marketServiceClient) List(ctx context.Context, in *api.Void, opts ...grpc.CallOption) (*Markets, error) {
+func (c *marketServiceClient) List(ctx context.Context, in *MarketListRequest, opts ...grpc.CallOption) (*Markets, error) {
 	out := new(Markets)
 	err := c.cc.Invoke(ctx, "/brokerageApi.MarketService/List", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *marketServiceClient) ChangeStatus(ctx context.Context, in *api.StatusChangeRequest, opts ...grpc.CallOption) (*api.Status, error) {
+	out := new(api.Status)
+	err := c.cc.Invoke(ctx, "/brokerageApi.MarketService/ChangeStatus", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -57,19 +77,27 @@ func (c *marketServiceClient) List(ctx context.Context, in *api.Void, opts ...gr
 // All implementations should embed UnimplementedMarketServiceServer
 // for forward compatibility
 type MarketServiceServer interface {
+	Set(context.Context, *Market) (*Market, error)
 	Get(context.Context, *MarketRequest) (*Market, error)
-	List(context.Context, *api.Void) (*Markets, error)
+	List(context.Context, *MarketListRequest) (*Markets, error)
+	ChangeStatus(context.Context, *api.StatusChangeRequest) (*api.Status, error)
 }
 
 // UnimplementedMarketServiceServer should be embedded to have forward compatible implementations.
 type UnimplementedMarketServiceServer struct {
 }
 
+func (UnimplementedMarketServiceServer) Set(context.Context, *Market) (*Market, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Set not implemented")
+}
 func (UnimplementedMarketServiceServer) Get(context.Context, *MarketRequest) (*Market, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Get not implemented")
 }
-func (UnimplementedMarketServiceServer) List(context.Context, *api.Void) (*Markets, error) {
+func (UnimplementedMarketServiceServer) List(context.Context, *MarketListRequest) (*Markets, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method List not implemented")
+}
+func (UnimplementedMarketServiceServer) ChangeStatus(context.Context, *api.StatusChangeRequest) (*api.Status, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ChangeStatus not implemented")
 }
 
 // UnsafeMarketServiceServer may be embedded to opt out of forward compatibility for this service.
@@ -81,6 +109,24 @@ type UnsafeMarketServiceServer interface {
 
 func RegisterMarketServiceServer(s grpc.ServiceRegistrar, srv MarketServiceServer) {
 	s.RegisterService(&MarketService_ServiceDesc, srv)
+}
+
+func _MarketService_Set_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Market)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(MarketServiceServer).Set(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/brokerageApi.MarketService/Set",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(MarketServiceServer).Set(ctx, req.(*Market))
+	}
+	return interceptor(ctx, in, info, handler)
 }
 
 func _MarketService_Get_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
@@ -102,7 +148,7 @@ func _MarketService_Get_Handler(srv interface{}, ctx context.Context, dec func(i
 }
 
 func _MarketService_List_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(api.Void)
+	in := new(MarketListRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
@@ -114,7 +160,25 @@ func _MarketService_List_Handler(srv interface{}, ctx context.Context, dec func(
 		FullMethod: "/brokerageApi.MarketService/List",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(MarketServiceServer).List(ctx, req.(*api.Void))
+		return srv.(MarketServiceServer).List(ctx, req.(*MarketListRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _MarketService_ChangeStatus_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(api.StatusChangeRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(MarketServiceServer).ChangeStatus(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/brokerageApi.MarketService/ChangeStatus",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(MarketServiceServer).ChangeStatus(ctx, req.(*api.StatusChangeRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -127,12 +191,20 @@ var MarketService_ServiceDesc = grpc.ServiceDesc{
 	HandlerType: (*MarketServiceServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
+			MethodName: "Set",
+			Handler:    _MarketService_Set_Handler,
+		},
+		{
 			MethodName: "Get",
 			Handler:    _MarketService_Get_Handler,
 		},
 		{
 			MethodName: "List",
 			Handler:    _MarketService_List_Handler,
+		},
+		{
+			MethodName: "ChangeStatus",
+			Handler:    _MarketService_ChangeStatus_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
